--- a/pubman/pubman_ear/pom.xml
+++ b/pubman/pubman_ear/pom.xml
@@ -31,18 +31,18 @@
 	<parent>
 		<artifactId>pubman</artifactId>
 		<groupId>de.mpg.escidoc.pubman</groupId>
-		<version>7.4.1-SNAPSHOT</version>
+		<version>7.4.1</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.pubman</groupId>
 	<artifactId>pubman_ear</artifactId>
 	<name>pubman_ear</name>
 	<packaging>ear</packaging>
-	<version>7.4.1-SNAPSHOT</version>
+	<version>7.4.1</version>
 	<scm>
-		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/trunk/pubman/pubman_ear</connection>
-		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/trunk/pubman/pubman_ear</developerConnection>
-		<url>https://subversion.mpdl.mpg.de/repos/common/</url>
+		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/tags/pubman-7.4.1/pubman_ear</connection>
+		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/tags/pubman-7.4.1/pubman_ear</developerConnection>
+		<url>https://subversion.mpdl.mpg.de/repos/common/tags/pubman-7.4.1/common</url>
 	</scm>
 	<build>
 		<plugins>
@@ -580,14 +580,14 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.pubman</groupId>
 			<artifactId>pubman_logic</artifactId>
-			<version>7.4.1-SNAPSHOT</version>
+			<version>7.4.1</version>
 			<scope>compile</scope>
 			<type>ejb</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.pubman</groupId>
 			<artifactId>pubman_presentation</artifactId>
-			<version>7.4.1-SNAPSHOT</version>
+			<version>7.4.1</version>
 			<scope>compile</scope>
 			<type>war</type>
 		</dependency>
@@ -870,35 +870,22 @@
 									<tasks>
 										<!-- copy a default jboss server configuration -->
 										<copy todir="${project.build.directory}">
-											<fileset dir="src/jboss/configuration42x"/>
+											<fileset dir="src/jboss/configuration42x" />
 										</copy>
 										<!-- copy over the validation datasource descriptor -->
-										<copy overwrite="true"
-											file="${project.build.directory}/classes/validation-ds.xml"
-											todir="${project.build.directory}/jboss/server/deploy"/>
+										<copy overwrite="true" file="${project.build.directory}/classes/validation-ds.xml" todir="${project.build.directory}/jboss/server/deploy" />
 										<!-- copy over the configuration file -->
-										<copy overwrite="true"
-											file="${project.build.directory}/classes/pubman.properties"
-											todir="${project.build.directory}/jboss/server/conf"/>
+										<copy overwrite="true" file="${project.build.directory}/classes/pubman.properties" todir="${project.build.directory}/jboss/server/conf" />
 										<!-- copy over the aa configuration file -->
-										<copy overwrite="true"
-											file="${project.build.directory}/classes/auth.properties"
-											tofile="${project.build.directory}/jboss/server/conf/cone.properties"/>
+										<copy overwrite="true" file="${project.build.directory}/classes/auth.properties" tofile="${project.build.directory}/jboss/server/conf/cone.properties" />
 										<!-- copy over the aa configuration file -->
-										<copy overwrite="true"
-											file="${project.build.directory}/classes/auth.properties"
-											todir="${project.build.directory}/jboss/server/conf"/>
+										<copy overwrite="true" file="${project.build.directory}/classes/auth.properties" todir="${project.build.directory}/jboss/server/conf" />
 										<!-- copy over the aa configuration xml -->
-										<copy overwrite="true"
-											file="${project.build.directory}/classes/conf.xml" todir="${jboss.install.dir}/server/${jboss.install.node}/conf"/>
+										<copy overwrite="true" file="${project.build.directory}/classes/conf.xml" todir="${jboss.install.dir}/server/${jboss.install.node}/conf" />
 										<!-- copy over the validation datasource descriptor -->
-										<copy overwrite="true"
-											file="${project.build.directory}/classes/pid-cache-ds.xml"
-											todir="${project.build.directory}/jboss/server/deploy"/>
+										<copy overwrite="true" file="${project.build.directory}/classes/pid-cache-ds.xml" todir="${project.build.directory}/jboss/server/deploy" />
 										<!-- copy over the apache FOP configuration file -->
-										<copy overwrite="true"
-											file="${project.build.directory}/classes/in_ear/dataaquisition/apache-fop-config.xml"
-											todir="${jboss.install.dir}/server/${jboss.install.node}/conf"/>
+										<copy overwrite="true" file="${project.build.directory}/classes/in_ear/dataaquisition/apache-fop-config.xml" todir="${jboss.install.dir}/server/${jboss.install.node}/conf" />
 									</tasks>
 								</configuration>
 							</execution>
@@ -912,37 +899,22 @@
 									<tasks>
 										<!-- configuration for the deploy jboss server -->
 										<!-- copy over the validation datasource descriptor -->
-										<copy overwrite="true"
-											file="${project.build.directory}/classes/validation-ds.xml"
-											todir="${jboss.install.dir}/server/${jboss.install.node}/deploy"/>
+										<copy overwrite="true" file="${project.build.directory}/classes/validation-ds.xml" todir="${jboss.install.dir}/server/${jboss.install.node}/deploy" />
 										<!-- copy over the configuration file -->
-										<copy overwrite="true"
-											file="${project.build.directory}/classes/pubman.properties"
-											todir="${jboss.install.dir}/server/${jboss.install.node}/conf"/>
+										<copy overwrite="true" file="${project.build.directory}/classes/pubman.properties" todir="${jboss.install.dir}/server/${jboss.install.node}/conf" />
 										<!-- copy over the aa configuration file -->
-										<copy overwrite="true"
-											file="${project.build.directory}/classes/auth.properties"
-											tofile="${jboss.install.dir}/server/${jboss.install.node}/conf/cone.properties"/>
+										<copy overwrite="true" file="${project.build.directory}/classes/auth.properties" tofile="${jboss.install.dir}/server/${jboss.install.node}/conf/cone.properties" />
 										<!-- copy over the aa configuration file -->
-										<copy overwrite="true"
-											file="${project.build.directory}/classes/auth.properties"
-											todir="${jboss.install.dir}/server/${jboss.install.node}/conf"/>
+										<copy overwrite="true" file="${project.build.directory}/classes/auth.properties" todir="${jboss.install.dir}/server/${jboss.install.node}/conf" />
 										<!-- copy over the aa configuration xml -->
-										<copy overwrite="true"
-											file="${project.build.directory}/classes/conf.xml" todir="${jboss.install.dir}/server/${jboss.install.node}/conf"/>
+										<copy overwrite="true" file="${project.build.directory}/classes/conf.xml" todir="${jboss.install.dir}/server/${jboss.install.node}/conf" />
 										<!-- copy over the validation datasource descriptor -->
-										<copy overwrite="true"
-											file="${project.build.directory}/classes/pid-cache-ds.xml"
-											todir="${jboss.install.dir}/server/${jboss.install.node}/deploy"/>
+										<copy overwrite="true" file="${project.build.directory}/classes/pid-cache-ds.xml" todir="${jboss.install.dir}/server/${jboss.install.node}/deploy" />
 										<!-- copy over the apache FOP configuration file -->
-										<copy overwrite="true"
-											file="${project.build.directory}/classes/in_ear/dataaquisition/apache-fop-config.xml"
-											todir="${jboss.install.dir}/server/${jboss.install.node}/conf"/>
+										<copy overwrite="true" file="${project.build.directory}/classes/in_ear/dataaquisition/apache-fop-config.xml" todir="${jboss.install.dir}/server/${jboss.install.node}/conf" />
 										<!-- configuration for the runtime server jboss server -->
-										<!-- <xslt processor="trax" in="${jboss.install.dir}/server/default/deploy/properties-service.xml" 
-											style="${project.build.directory}/classes/properties-service-transform.xsl" 
-											out="${project.build.directory}/properties-service.temp" /> <copy overwrite="true" 
-											file="${project.build.directory}/properties-service.temp" toFile="${jboss.install.dir}/server/default/deploy/properties-service.xml"> 
+										<!-- <xslt processor="trax" in="${jboss.install.dir}/server/default/deploy/properties-service.xml" style="${project.build.directory}/classes/properties-service-transform.xsl" 
+											out="${project.build.directory}/properties-service.temp" /> <copy overwrite="true" file="${project.build.directory}/properties-service.temp" toFile="${jboss.install.dir}/server/default/deploy/properties-service.xml"> 
 											</copy> -->
 									</tasks>
 								</configuration>
@@ -1007,12 +979,9 @@
 					<!-- TODO: Selenium tests from TestSuite.html -->
 					<!-- plugin> <artifactId>maven-antrun-plugin</artifactId> <executions> 
 						<execution> <id>launch-selenium</id> <phase>integration-test</phase> <configuration> 
-						<tasks> <taskdef resource="selenium-ant.properties"> <classpath refid="maven.plugin.classpath" 
-						/> </taskdef> <selenese suite="src/test/resources/selenium/TestSuite.html" 
-						browser="*chrome /usr/lib/firefox/firefox-2-bin" timeoutInSeconds="180" port="5555" 
+						<tasks> <taskdef resource="selenium-ant.properties"> <classpath refid="maven.plugin.classpath" /> </taskdef> <selenese suite="src/test/resources/selenium/TestSuite.html" browser="*chrome /usr/lib/firefox/firefox-2-bin" timeoutInSeconds="180" port="5555" 
 						results="${project.build.directory}/selenium-firefox-results.html" startURL="http://localhost:${cargo.port}" 
-						/> <selenese suite="src/test/resources/selenium/TestSuite.html" browser="*chrome 
-						/usr/lib/firefox-3.5.3/firefox-3.5" timeoutInSeconds="180" port="4445" results="${project.build.directory}/selenium-firefox-results.html" 
+						 /> <selenese suite="src/test/resources/selenium/TestSuite.html" browser="*chrome /usr/lib/firefox-3.5.3/firefox-3.5" timeoutInSeconds="180" port="4445" results="${project.build.directory}/selenium-firefox-results.html" 
 						startURL="http://localhost:${cargo.port}" /> </tasks> </configuration> <goals> 
 						<goal>run</goal> </goals> </execution> </executions> <dependencies> <dependency> 
 						<groupId>ant</groupId> <artifactId>ant-nodeps</artifactId> <version>1.6.5</version> 
