--- a/pubman/pubman_ear/pom.xml
+++ b/pubman/pubman_ear/pom.xml
@@ -31,18 +31,18 @@
 	<parent>
 		<artifactId>pubman</artifactId>
 		<groupId>de.mpg.escidoc.pubman</groupId>
-		<version>7.4.1</version>
+		<version>7.4.2-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.pubman</groupId>
 	<artifactId>pubman_ear</artifactId>
 	<name>pubman_ear</name>
 	<packaging>ear</packaging>
-	<version>7.4.1</version>
+	<version>7.4.2-SNAPSHOT</version>
 	<scm>
-		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/tags/pubman-7.4.1/pubman_ear</connection>
-		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/tags/pubman-7.4.1/pubman_ear</developerConnection>
-		<url>https://subversion.mpdl.mpg.de/repos/common/tags/pubman-7.4.1/common</url>
+		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/trunk/pubman/pubman_ear</connection>
+		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/trunk/pubman/pubman_ear</developerConnection>
+		<url>https://subversion.mpdl.mpg.de/repos/common/</url>
 	</scm>
 	<build>
 		<plugins>
@@ -580,14 +580,14 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.pubman</groupId>
 			<artifactId>pubman_logic</artifactId>
-			<version>7.4.1</version>
+			<version>7.4.2-SNAPSHOT</version>
 			<scope>compile</scope>
 			<type>ejb</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.pubman</groupId>
 			<artifactId>pubman_presentation</artifactId>
-			<version>7.4.1</version>
+			<version>7.4.2-SNAPSHOT</version>
 			<scope>compile</scope>
 			<type>war</type>
 		</dependency>
@@ -913,8 +913,7 @@
 										<!-- copy over the apache FOP configuration file -->
 										<copy overwrite="true" file="${project.build.directory}/classes/in_ear/dataaquisition/apache-fop-config.xml" todir="${jboss.install.dir}/server/${jboss.install.node}/conf" />
 										<!-- configuration for the runtime server jboss server -->
-										<!-- <xslt processor="trax" in="${jboss.install.dir}/server/default/deploy/properties-service.xml" style="${project.build.directory}/classes/properties-service-transform.xsl" 
-											out="${project.build.directory}/properties-service.temp" /> <copy overwrite="true" file="${project.build.directory}/properties-service.temp" toFile="${jboss.install.dir}/server/default/deploy/properties-service.xml"> 
+										<!-- <xslt processor="trax" in="${jboss.install.dir}/server/default/deploy/properties-service.xml" style="${project.build.directory}/classes/properties-service-transform.xsl" out="${project.build.directory}/properties-service.temp" /> <copy overwrite="true" file="${project.build.directory}/properties-service.temp" toFile="${jboss.install.dir}/server/default/deploy/properties-service.xml"> 
 											</copy> -->
 									</tasks>
 								</configuration>
@@ -979,10 +978,8 @@
 					<!-- TODO: Selenium tests from TestSuite.html -->
 					<!-- plugin> <artifactId>maven-antrun-plugin</artifactId> <executions> 
 						<execution> <id>launch-selenium</id> <phase>integration-test</phase> <configuration> 
-						<tasks> <taskdef resource="selenium-ant.properties"> <classpath refid="maven.plugin.classpath" /> </taskdef> <selenese suite="src/test/resources/selenium/TestSuite.html" browser="*chrome /usr/lib/firefox/firefox-2-bin" timeoutInSeconds="180" port="5555" 
-						results="${project.build.directory}/selenium-firefox-results.html" startURL="http://localhost:${cargo.port}" 
-						 /> <selenese suite="src/test/resources/selenium/TestSuite.html" browser="*chrome /usr/lib/firefox-3.5.3/firefox-3.5" timeoutInSeconds="180" port="4445" results="${project.build.directory}/selenium-firefox-results.html" 
-						startURL="http://localhost:${cargo.port}" /> </tasks> </configuration> <goals> 
+						<tasks> <taskdef resource="selenium-ant.properties"> <classpath refid="maven.plugin.classpath" /> </taskdef> <selenese suite="src/test/resources/selenium/TestSuite.html" browser="*chrome /usr/lib/firefox/firefox-2-bin" timeoutInSeconds="180" port="5555" results="${project.build.directory}/selenium-firefox-results.html" startURL="http://localhost:${cargo.port}" 
+						  /> <selenese suite="src/test/resources/selenium/TestSuite.html" browser="*chrome /usr/lib/firefox-3.5.3/firefox-3.5" timeoutInSeconds="180" port="4445" results="${project.build.directory}/selenium-firefox-results.html" startURL="http://localhost:${cargo.port}" /> </tasks> </configuration> <goals> 
 						<goal>run</goal> </goals> </execution> </executions> <dependencies> <dependency> 
 						<groupId>ant</groupId> <artifactId>ant-nodeps</artifactId> <version>1.6.5</version> 
 						</dependency> </dependencies> </plugin -->
