--- a/pubman/pubman_presentation/pom.xml
+++ b/pubman/pubman_presentation/pom.xml
@@ -29,19 +29,19 @@
 	<parent>
 		<artifactId>pubman</artifactId>
 		<groupId>de.mpg.escidoc.pubman</groupId>
-		<version>7.4.1</version>
+		<version>7.4.2-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.pubman</groupId>
 	<artifactId>pubman_presentation</artifactId>
 	<name>pubman_presentation</name>
-	<version>7.4.1</version>
+	<version>7.4.2-SNAPSHOT</version>
 	<packaging>war</packaging>
 
 	<scm>
-		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/tags/pubman-7.4.1/pubman_presentation</connection>
-		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/tags/pubman-7.4.1/pubman_presentation</developerConnection>
-		<url>https://subversion.mpdl.mpg.de/repos/pubman/tags/pubman-7.4.1/pubman</url>
+		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/trunk/pubman/pubman_presentation</connection>
+		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/trunk/pubman/pubman_presentation</developerConnection>
+		<url>https://subversion.mpdl.mpg.de/repos/pubman/</url>
 	</scm>
 
 	<build>
@@ -348,7 +348,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.pubman</groupId>
 			<artifactId>pubman_logic</artifactId>
-			<version>7.4.1</version>
+			<version>7.4.2-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>	
 		<dependency>
