--- a/pubman/pubman_installer/src/main/resources/opensource/pubman.properties
+++ b/pubman/pubman_installer/src/main/resources/opensource/pubman.properties
@@ -94,9 +94,9 @@ escidoc.pubman.favicon.apply=${escidoc.pubman.favicon.apply}
 escidoc.pubman.cookie.version=${escidoc.pubman.cookie.version}
 
 # URL of the FIZ framework instance
-escidoc.framework_access.framework.url=${escidoc.common.framework.url}
+escidoc.framework_access.framework.url=
 # URL of the escidoc-core instance you like to logon to
-escidoc.framework_access.login.url=${escidoc.framework_access.login.url}
+escidoc.framework_access.login.url=
 
 
 # Identifier of the content type "publication" in the actual framework instance
@@ -135,10 +135,10 @@ escidoc.pubman.root.organisation.id=${escidoc.pubman.root.organisation.id}
 escidoc.cone.querier.class=${escidoc.cone.querier.class}
 
 # Mulgara server name
-escidoc.cone.mulgara.server.name=${escidoc.cone.mulgara.server.name}
+escidoc.cone.mulgara.server.name=
 
 # Mulgara server port
-escidoc.cone.mulgara.server.port=${escidoc.cone.mulgara.server.port}
+escidoc.cone.mulgara.server.port=
 
 # unAPI server
 escidoc.unapi.download.server=${escidoc.unapi.download.server}
